--- a/index.html
+++ b/index.html
@@ -10,34 +10,10 @@
     <br><br>
 
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Oct</h5><h1>23rd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 40px;">출국</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Oct</h5><h1>31th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 40px;">귀국</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>1st</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">국어 수행평가<br><div style="font-size: 20px;">노래 가사 문학적으로 해석하기</div></div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>1st</h1>
+        <h5>Nov</h5><h1>3rd</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 신문 기사 발표</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>2nd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">수학[영] 수행평가<br><div style="font-size: 20px;">실생활에 사용되는 여러가지 함수 발표</div></div>
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
         <h5>Nov</h5><h1>3rd</h1>
@@ -50,6 +26,12 @@
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">집현전 포럼 신청</div>
+<br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Nov</h5><h1>3rd</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">미래진로캠프 보고서 제출</div>
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
         <h5>Nov</h5><h1>6th</h1>
@@ -77,6 +59,12 @@
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">지구과학[조] 발표<br><div style="font-size: 20px;">이민재 이한나 김도윤 박민우 전재용</div></div>
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>8th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">영어[신] 수행평가<br><div style="font-size: 20px;">주제 당일 공지</div></div>
 
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
