--- a/index.html
+++ b/index.html
@@ -9,89 +9,13 @@
     <div style="width: 100%; height: 90px; text-align: center; border: 3px solid rgb(252, 226, 28); border-radius: 3px 3px 3px 3px/3px 3px 3px 3px; background-color:rgba(91, 88, 85, 0.605)"><h1 style="color: rgb(252, 226, 28);">4반일정</h1></div>
     <br><br>
 
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>3rd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 신문 기사 발표</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>3rd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">수학[소] 수행평가<br><div style="font-size: 20px;">실생활에 사용되는 여러가지 수열 발표</div></div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>3rd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">집현전 포럼 신청</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>3rd</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">미래진로캠프 보고서 제출</div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>6th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">교내 소프트웨어 대회 신청</div>
-
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>7th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">수학[희] 수행평가<br><div style="font-size: 20px;">함수의 성질 또는 자신의 진로와 관련된 함수 기고문 작성</div></div>
-
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>7th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">영어[보] 수행평가<br><div style="font-size: 20px;">쓰기 수행평가 초안 작성</div></div>
 
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>7th</h1>
+        <h5>Nov</h5><h1>15th</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">지구과학[조] 발표<br><div style="font-size: 20px;">이민재 이한나 김도윤 박민우 전재용</div></div>
-    <br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>8th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">영어[신] 수행평가<br><div style="font-size: 20px;">주제 당일 공지</div></div>
-
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>8th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">창의재단 RnE 최종보고서 제출</div></div>
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>11th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">오픈랩</div></div>
-    <br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>13th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">융탐 논문 제출</div></div>
-
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>13th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">정보[박] 발표<br><div style="font-size: 20px;">김시유 배준형</div></div>   
-
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">지학[석] 발표</div>
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
         <h5>Nov</h5><h1>20th</h1>
@@ -100,11 +24,33 @@
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">정보[박] 발표<br><div style="font-size: 20px;">박민우 최원찬</div></div>
 
 <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Nov</h5><h1>21st</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">지구과학[조] 발표<br><div style="font-size: 20px;">김예은 정이린 박민우 이재원</div></div>
+
+
+<br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
         <h5>Nov</h5><h1>21st</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
     <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">영어[보] 쓰기 수행평가</div> 
+
+<br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>23th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">물리[박] 반도체 수행<br><div style="font-size: 20px;">안내영상 보고오기</div></div>
+
+<br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Nov</h5><h1>23th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">수학[윤] 학교프린트 풀어오기<br><div style="font-size: 20px;">이한나 김도윤 김민찬 김시유 박민우 배준형 이동현 이재원 최원찬 최인서</div></div>
 
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
