--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">정보[박] 발표<br><div style="font-size: 20px;">박민우 최원찬</div></div>
 
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>21st</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">지구과학[조] 발표<br><div style="font-size: 20px;">김예은 정이린 박민우 이재원</div></div>
-
 
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
@@ -58,6 +51,13 @@
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 모둠 활동<br><div style="font-size: 20px;">최종보고서 제출</div></div>
+
+<br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Nov</h5><h1>26th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로<br><div style="font-size: 20px;">커리어패스 ppt 제출</div></div>
 
 
 <br>
