--- a/index.html
+++ b/index.html
@@ -9,27 +9,51 @@
     <div style="width: 100%; height: 90px; text-align: center; border: 3px solid rgb(252, 226, 28); border-radius: 3px 3px 3px 3px/3px 3px 3px 3px; background-color:rgba(91, 88, 85, 0.605)"><h1 style="color: rgb(252, 226, 28);">4반일정</h1></div>
     <br><br>
 
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>27th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">국어[임] 한권 읽기 수행평가</div>
+
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>27th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">통과[정] 질문노트 수행평가</div>
+
 
 <br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>23th</h1>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>28th</h1>
     </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">수학[윤] 학교프린트 풀어오기<br><div style="font-size: 20px;">이한나 김도윤 김민찬 김시유 박민우 배준형 이동현 이재원 최원찬 최인서</div></div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">화학[임] 실험 수행평가</div>
 
-<br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>24th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 모둠 활동<br><div style="font-size: 20px;">최종보고서 제출</div></div>
 
-<br>
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>28th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">통과[규] 실험 수행평가</div>
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Nov</h5><h1>29th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">지학[강] 실험 수행평가</div>
+
+
+    <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>26th</h1>
+        <h5>Nov</h5><h1>29th</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로<br><div style="font-size: 20px;">커리어패스 ppt 제출</div></div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">장영실 탐구 발표대회</div>
 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
@@ -38,13 +62,57 @@
     <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
     <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">탐구공동체<br><div style="font-size: 20px;">활동보고서 제출</div></div>
 
-<br>
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Nov</h5><h1>30th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">영어[신] 해당자 발표</div>
+
+    <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
         <h5>Nov</h5><h1>30th</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">물리[박] 반도체 수행<br><div style="font-size: 20px;">안내영상 보고오기</div></div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">국어[임] 한권 읽기 수행평가</div>
 
+
+<br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>1st</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">물리[박] 실험 수행평가<br><div style="font-size: 20px;">안내영상 보고오기</div></div>
+
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>1st</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">정보[홍] 프로젝트 수행평가 제출</div>
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>4th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">통과[정] 실험 수행평가</div>
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>4th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">정보[박] 프로젝트 수행평가 제출</div>
+
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Dec</h5><h1>4th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">화학[박] 해설쌤 제출</div>
 
 <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
@@ -52,6 +120,22 @@
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
     <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">고급 생명과학<br><div style="font-size: 20px;">질문노트 제출</div></div>
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>8th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">음악 수행평가</div>
+
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Dec</h5><h1>8th</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 커리어 패스 발표</div>
+
 
 
 
