--- a/index.html
+++ b/index.html
@@ -42,19 +42,11 @@
 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>29th</h1>
+        <h5>Nov</h5><h1>30th</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
     <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">지학[강] 실험 수행평가</div>
-
-
-    <br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Nov</h5><h1>29th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">장영실 탐구 발표대회</div>
-
+ 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
         <h5>Nov</h5><h1>30th</h1>
@@ -71,7 +63,7 @@
 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Nov</h5><h1>30th</h1>
+        <h5>Nov</h5><h1>30px</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
     <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">국어[임] 한권 읽기 수행평가</div>
@@ -91,6 +83,21 @@
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
     <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">정보[홍] 프로젝트 수행평가 제출</div>
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
+        <h5>Dec</h5><h1>1st</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">음악 수행평가<br><div style="font-size: 20px;">듣기 실기+프린트 검사</div></div>
+
+
+    <br>
+    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
+        <h5>Dec</h5><h1>1st</h1>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
+    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 커리어 패스 발표</div>
 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
@@ -123,20 +130,10 @@
 
     <br>
     <div style="border-radius: 50%; text-align: center; background-color: rgb(47, 26, 77); border: 2px solid rgb(191, 0, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: rgb(191, 0, 255); display: table-cell;">
-        <h5>Dec</h5><h1>8th</h1>
+        <h5>Dec</h5><h1>12th</h1>
     </div>
     <div style="display: table-cell; vertical-align: middle; color: rgb(191, 0, 255);width: 4.5%;">----</div>
-    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">음악 수행평가</div>
-
-
-    <br>
-    <div style="border-radius: 50%; text-align: center; background-color: rgba(58, 58, 4.5); border: 2px solid rgb(0, 221, 255); width: 19.5%; height: 90px; vertical-align: top; line-height: 10px; color: aqua; display: table-cell;">
-        <h5>Dec</h5><h1>8th</h1>
-    </div>
-    <div style="display: table-cell; vertical-align: middle; color: aqua; width: 4.5%;">----</div>
-    <div style="background-color: rgba(58, 58, 4.5); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(0, 221, 255); color: aqua; vertical-align: middle; text-align: center; font-size: 30px;">진로 커리어 패스 발표</div>
-
-
+    <div style="background-color: rgb(47, 26, 77); display: table-cell; border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;height: 90px; width: 54%; border: 3px solid rgb(191, 0, 255); color: rgb(191, 0, 255); vertical-align: middle; text-align: center; font-size: 30px;">화학[짜] 실험 수행평가<br><div style="font-size: 20px;">안내영상 보고오기</div></div>
 
 
 </body>
